--- a/Index.html
+++ b/Index.html
@@ -7,6 +7,35 @@
   <title>PORTFOLIO</title>
 </head>
 <body>
-  
+  <nav>
+    <div class="logo">
+      <image src="./logo.png"alt="logo" width="100"/>
+    </div>
+    <div  class="menu-links">
+      <ul>
+        <li><a href="#">HOME</a></li>
+        <li><a href="#">Project</a></li>
+        <li><a href="#">BLOG</a></li>
+      </ul>
+    </div>
+  </nav>
+  <main>
+    <header>
+     
+    </header>
+    <section>
+      <div>
+        <h2></h2>
+        <p></p>
+      </div>
+    </section>
+    <section>
+      <div></div>
+    </section>
+    <section>
+      <div></div>
+    </section>
+  </main>
+ 
 </body>
 </html>
