--- a/Index.html
+++ b/Index.html
@@ -21,7 +21,15 @@
   </nav>
   <main>
     <header>
-     
+      <div class="title">
+        <h1>I, ROHIT </h1>
+        <h3>My Portfolio</h3>
+        <p>I am graduate and i want to become an full stack developer.I started learning web developing course in Skill Safari</p>
+      </div>
+      <div>
+        <button>Contact</button>
+        <button>Resume</button>
+      </div>
     </header>
     <section>
       <div>
@@ -36,6 +44,29 @@
       <div></div>
     </section>
   </main>
- 
+  <footer>
+    <div>
+      <h2>ABOUT ME</h2>
+      <p></p>
+    </div>
+    <div class="Social links">
+      <ul>
+          <li><a href="">FACEBOOK</a></li>
+          <li><a href="">TWITTER</a></li>
+          <li><a href="">GITHUB</a></li>
+      </ul>
+    </div>
+    <div >
+      <h2>Web site</h2>
+      <ul>
+        <li><a href="">HOME</a></li>
+        <li><a href="">PROJECT</a></li>
+        <li><a href="">BLOG</a></li>
+      </ul>
+    </div>
+    <div>
+      <p>Copyrights &copy;</p>
+    </div>
+  </footer>
 </body>
 </html>
