--- a/Index.html
+++ b/Index.html
@@ -5,20 +5,19 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>PORTFOLIO</title>
-  <link ref="stylesheet" href="./styles/style.css"/>
+  <link rel="stylesheet" href="./styles/style.css"/>
 </head>
-
 <body>
   <nav>
     <div class="logo">
       <image src="./logo.png"alt="logo" width="100"/>
     </div>
     <div  class="menu-links">
-      <ul>
+      <ol>
         <li><a href="#">HOME</a></li>
         <li><a href="#">Project</a></li>
         <li><a href="#">BLOG</a></li>
-      </ul>
+      </ol>
     </div>
   </nav>
   <main>
