--- a/Index.html
+++ b/Index.html
@@ -1,73 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>PORTFOLIO</title>
-  <link rel="stylesheet" href="./styles/style.css"/>
-</head>
-<body>
-  <nav>
-    <div class="logo">
-      <image src="./logo.png"alt="logo" width="100"/>
-    </div>
-    <div  class="menu-links">
-      <ol>
-        <li><a href="#">HOME</a></li>
-        <li><a href="#">Project</a></li>
-        <li><a href="#">BLOG</a></li>
-      </ol>
-    </div>
-  </nav>
-  <main>
-    <header>
-      <div class="title">
-        <h1>I, ROHIT </h1>
-        <h3>My Portfolio</h3>
-        <p>I am graduate and i want to become an full stack developer.I started learning web developing course in Skill Safari</p>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Kishore - Component Library</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <h1 id="title">Kishore's Component Library</h1>
+    <nav class="navigation">
+      <div class="container-fluid">
+        <div class="brand-name">Kishore</div>
+        <ul>
+          <li><a href="#" class="link active">Home</a></li>
+          <li><a href="#" class="link">Projects</a></li>
+          <li><a href="#" class="link">About</a></li>
+        </ul>
       </div>
-      <div>
-        <button>Contact</button>
-        <button>Resume</button>
-      </div>
+    </nav>
+    <hr />
+    <h3>@Header</h3>
+    <header class="container hero">
+      <img src="./images/header.svg" alt="an header images" />
+
+      <img src="./images/header.svg" alt="an header images" class="profile" />
+
+      <h2>I am Kishore, a web developer</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias,
+        saepe a? Nemo ab numquam accusamus commodi quas maxime libero. Dicta
+        ipsa laborum mollitia quia? Numquam corporis impedit rerum similique, in
+        perferendis sit porro quaerat vitae ducimus suscipit ex molestiae eos
+        iste tenetur at voluptatem facilis autem esse aperiam quod? Atque
+        adipisci commodi pariatur dolores error?
+      </p>
     </header>
+
+    <hr />
+    <h2>@Sections</h2>
     <section>
-      <div>
-        <h2></h2>
-        <p></p>
+      <h2>Section Heading</h2>
+      <p>
+        A section is used to separate parts of pages. In marketing websites you
+        would have seen a header followed by sections of features, team,
+        pricing, contact info etc.
+      </p>
+      <a href="#" class="link primary-link">Primary Link</a>
+    </section>
+    <hr />
+
+    <section class="gray">
+      <h2>Section Heading</h2>
+      <p>
+        A section is used to separate parts of pages. In marketing websites you
+        would have seen a header followed by sections of features, team,
+        pricing, contact info etc.
+      </p>
+      <a href="#" class="link secondary-link">Primary Link</a>
+    </section>
+    <hr />
+    <h2>@footer</h2>
+    <footer>
+      <div class="container-fluid">
+        <h2>Heading Inside Footer</h2>
+        <ul class="list-inline">
+          <li><a href="#">Facebook</a></li>
+          <li><a href="#">Instagram</a></li>
+          <li><a href="#">LinkedIn</a></li>
+          <li><a href="#">GitHub</a></li>
+        </ul>
       </div>
-    </section>
-    <section>
-      <div></div>
-    </section>
-    <section>
-      <div></div>
-    </section>
-  </main>
-  <footer>
-    <div>
-      <h2>ABOUT ME</h2>
-      <p></p>
-    </div>
-    <div class="Social links">
-      <ul>
-          <li><a href="">FACEBOOK</a></li>
-          <li><a href="">TWITTER</a></li>
-          <li><a href="">GITHUB</a></li>
-      </ul>
-    </div>
-    <div >
-      <h2>Web site</h2>
-      <ul>
-        <li><a href="">HOME</a></li>
-        <li><a href="">PROJECT</a></li>
-        <li><a href="">BLOG</a></li>
-      </ul>
-    </div>
-    <div>
-      <p>Copyrights &copy;</p>
-    </div>
-  </footer>
-</body>
+    </footer>
+  </body>
 </html>
