--- a/Index.html
+++ b/Index.html
@@ -4,14 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kishore - Component Library</title>
+    <title>ROHIT PORTFOLIO</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1 id="title">Kishore's Component Library</h1>
     <nav class="navigation">
-      <div class="container-fluid">
-        <div class="brand-name">Kishore</div>
+      <div class="nav">
+        <div class="title">ROHIT</div>
         <ul>
           <li><a href="#" class="link active">Home</a></li>
           <li><a href="#" class="link">Projects</a></li>
@@ -20,50 +19,31 @@
       </div>
     </nav>
     <hr />
-    <h3>@Header</h3>
-    <header class="container hero">
-      <img src="./images/header.svg" alt="an header images" />
-
-      <img src="./images/header.svg" alt="an header images" class="profile" />
-
-      <h2>I am Kishore, a web developer</h2>
+    <header class="image">
+      <img src="./image.jpg" alt="an header images" />
+      <h2>I am ROHIT, I am B.tec graduate </h2>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias,
-        saepe a? Nemo ab numquam accusamus commodi quas maxime libero. Dicta
-        ipsa laborum mollitia quia? Numquam corporis impedit rerum similique, in
-        perferendis sit porro quaerat vitae ducimus suscipit ex molestiae eos
-        iste tenetur at voluptatem facilis autem esse aperiam quod? Atque
-        adipisci commodi pariatur dolores error?
+        TECHNOLIGES KNOWN:HTML,CSS,JAVA,PYTHON
       </p>
+      <div class="buttons">
+        <Button class="btn1">contact me</Button>
+        <button class="btn2">Resume</button>
+      </div>     
     </header>
-
-    <hr />
-    <h2>@Sections</h2>
-    <section>
-      <h2>Section Heading</h2>
-      <p>
-        A section is used to separate parts of pages. In marketing websites you
-        would have seen a header followed by sections of features, team,
-        pricing, contact info etc.
-      </p>
-      <a href="#" class="link primary-link">Primary Link</a>
+     <hr />
+    <section class="project">
+      <h2>Projects</h2>
+      <a href="#" class="link primary-link">Access Projects</a>
     </section>
     <hr />
-
     <section class="gray">
-      <h2>Section Heading</h2>
-      <p>
-        A section is used to separate parts of pages. In marketing websites you
-        would have seen a header followed by sections of features, team,
-        pricing, contact info etc.
-      </p>
-      <a href="#" class="link secondary-link">Primary Link</a>
+      <h2>Blog</h2>
+      <a href="#" class="link secondary-link">Blogs</a>
     </section>
     <hr />
-    <h2>@footer</h2>
     <footer>
-      <div class="container-fluid">
-        <h2>Heading Inside Footer</h2>
+      <div class="main">
+        <h2>Social Links</h2>
         <ul class="list-inline">
           <li><a href="#">Facebook</a></li>
           <li><a href="#">Instagram</a></li>
