--- a/Blogs.html
+++ b/Blogs.html
@@ -7,16 +7,16 @@
     <title>ROHIT PORTFOLIO</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="normalize.css"/>
+    <link rel="stylesheet" href="./normalize.css"/>
   </head>
   <body>
     <nav class="navigation">
       <div class="nav">
         <div class="title">ROHIT</div>
         <ul>
-          <li><a href="#" class="link active">Home</a></li>
+          <li><a href="Index.html" class="link ">Home</a></li>
           <li><a href="project.html" class="link">Projects</a></li>
-          <li><a href="Blogs.html" class="link">Blogs</a></li>
+          <li><a href="#" class="link active">Blogs</a></li>
         </ul>
       </div>
     </nav>
@@ -29,19 +29,21 @@
       </p>
       <div class="buttons">
         <Button class="link primary-link">contact me</Button>
-        <button class="link secondary-link"><i class="fas fa-download"></i> Resume</button>
+        <button class="link secondary-link"> <i class="fas fa-download"></i> Resume</button>
       </div>     
     </header>
-     <hr />
-    <section class="project">
-      <h2>Projects</h2>
-      <a href="./project.html" class="link primary-link"><i class="fab fa-readme"></i> Access Projects</a>
-    </section>
     <hr />
     <section class="gray">
       <div class="Blogs">
-        <h2>Blog</h2>
-      <a href="./Blogs.html" class="link secondary-link"><i class="fab fa-blogger"></i>   Blogs</a>
+        <h2>Hashnode</h2>
+      <a href="https://hashnode.com/" class="link secondary-link"><i class="fab fa-blogger"></i> Access Blogs</a>
+      </div> 
+    </section>
+    <hr/>
+    <section class="Blogs1">
+      <div>
+        <h2>Blog2</h2>
+      <a href="#" class="link primary-link"><i class="fab fa-blogger"></i> Access Blogs</a>
       </div> 
     </section>
     <hr />
