--- a/project.html
+++ b/project.html
@@ -7,16 +7,16 @@
     <title>ROHIT PORTFOLIO</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="normalize.css"/>
+    <link rel="stylesheet" href="./normalize.css"/>
   </head>
   <body>
     <nav class="navigation">
       <div class="nav">
         <div class="title">ROHIT</div>
         <ul>
-          <li><a href="#" class="link active">Home</a></li>
-          <li><a href="project.html" class="link">Projects</a></li>
-          <li><a href="Blogs.html" class="link">Blogs</a></li>
+          <li><a href="./Index.html" class="link ">Home</a></li>
+          <li><a href="#" class="link active">Projects</a></li>
+          <li><a href="Blogs.html" class="link">About</a></li>
         </ul>
       </div>
     </nav>
@@ -25,7 +25,7 @@
       <img src="./images.jpg" alt="an header images" />
       <h2>I am ROHIT, I am B.tec graduate </h2>
       <p>
-        TECHNOLIGES KNOWN:HTML,CSS,JAVA,PYTHON
+        TECHNOLOGIES KNOWN:HTML,CSS,JAVA,PYTHON
       </p>
       <div class="buttons">
         <Button class="link primary-link">contact me</Button>
@@ -34,15 +34,18 @@
     </header>
      <hr />
     <section class="project">
-      <h2>Projects</h2>
-      <a href="./project.html" class="link primary-link"><i class="fab fa-readme"></i> Access Projects</a>
+      <h2>Project#1</h2>
+      <h3>A Reconfigurable Triple Band Notched Elliptical Planar Monopole Antenna For UWB
+        Applications</h3>
+        <p>TECHNOLOGIES used:HFSS</p>
+      <a href="#" class="link primary-link"><i class="fab fa-readme"></i> Description</a>
+      <a href="#" class="link secondary-link"><i class="fas fa-laptop-code"></i>Check Live</a>
     </section>
-    <hr />
-    <section class="gray">
-      <div class="Blogs">
-        <h2>Blog</h2>
-      <a href="./Blogs.html" class="link secondary-link"><i class="fab fa-blogger"></i>   Blogs</a>
-      </div> 
+    <hr/>
+    <section class="project2">
+      <h2>Project#2</h2>
+      <a href="#" class="link primary-link"> <i class="fab fa-readme"></i>Description</a>
+      <a href="#" class="link secondary-link"> <i class="fas fa-laptop-code"></i> Check Live</a>
     </section>
     <hr />
     <footer>
