--- a/project.html
+++ b/project.html
@@ -16,7 +16,7 @@
         <ul>
           <li><a href="./Index.html" class="link ">Home</a></li>
           <li><a href="#" class="link active">Projects</a></li>
-          <li><a href="Blogs.html" class="link">About</a></li>
+          <li><a href="Blogs.html" class="link">Blogs</a></li>
         </ul>
       </div>
     </nav>
